--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,14 @@
 {
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
     "extends": [
         "airbnb-typescript",
         "airbnb/hooks",
-        "plugin:react/recommended",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended",
         "prettier"
     ],
     "parser": "@typescript-eslint/parser",
