--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-to-print": "^2.13.0",
         "react-router-dom": "^5.3.0",
+        "react-to-print": "^2.13.0",
         "web-vitals": "^1.1.2"
     },
     "devDependencies": {
@@ -20,9 +20,10 @@
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
         "@types/react-router-dom": "^5.3.2",
-        "@typescript-eslint/eslint-plugin": "^4.33.0",
-        "@typescript-eslint/parser": "^4.33.0",
+        "@typescript-eslint/eslint-plugin": "^5.2.0",
+        "@typescript-eslint/parser": "^5.2.0",
         "eslint": "^7.32.0",
+        "eslint-config-airbnb": "^18.2.1",
         "eslint-config-airbnb-typescript": "^12.3.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.2",
