--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-gtm-module": "^2.0.11",
         "react-router-dom": "^5.3.0",
         "react-to-print": "^2.13.0",
-        "react-gtm-module": "^2.0.11",
         "web-vitals": "^1.1.2"
     },
     "devDependencies": {
@@ -20,6 +20,7 @@
         "@types/jest": "^26.0.24",
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
+        "@types/react-gtm-module": "^2.0.1",
         "@types/react-router-dom": "^5.3.2",
         "@typescript-eslint/eslint-plugin": "^5.2.0",
         "@typescript-eslint/parser": "^5.2.0",
