--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
         "eslint-plugin-prettier": "^3.4.1",
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "node-sass": "^5.0.0",
         "prettier": "^2.4.1",
         "react-scripts": "^4.0.3",
         "typescript": "^4.4.4"
@@ -48,7 +47,10 @@
         "lint:fix": "npm run lint -- --fix"
     },
     "eslintConfig": {
-        "extends": "react-app"
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
     },
     "browserslist": {
         "production": [
