--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,8 @@
     },
     "plugins": ["eslint-plugin-import-helpers"],
     "rules": {
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-unused-vars": ["error"],
+        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/no-unused-vars": "error",
         "import-helpers/order-imports": [
             "error",
             {
