--- a/.eslintrc
+++ b/.eslintrc
@@ -24,11 +24,11 @@
     "rules": {
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
+        "import/no-unresolved": "off",
         "react/jsx-props-no-spreading": "off",
         "react/jsx-uses-react": "off",
         "react/prop-types": "off",
         "react/react-in-jsx-scope": "off",
-
         "import-helpers/order-imports": [
             "error",
             {
