--- a/package.json
+++ b/package.json
@@ -1,43 +1,48 @@
 {
-    "name": "spot-template",
-    "version": "0.1.0",
-    "private": false,
+    "name": "mos-frontend",
+    "version": "21.12.01",
+    "private": true,
     "dependencies": {
+        "@amcharts/amcharts4": "^4.10.22",
         "@ant-design/icons": "^4.6.4",
-        "antd": "^4.16.13",
+        "antd": "^4.17.2",
+        "chart.js": "^2.9.4",
         "moment": "^2.29.1",
+        "rc-field-form": "^1.22.0",
         "react": "^17.0.2",
+        "react-chartjs-2": "^2.10.0",
         "react-dom": "^17.0.2",
+        "react-email-editor": "^1.1.1",
         "react-gtm-module": "^2.0.11",
         "react-router-dom": "^5.3.0",
-        "react-storage-state": "^0.2.1",
-        "react-to-print": "^2.13.0",
-        "web-vitals": "^1.1.2"
+        "react-to-print": "^2.14.1",
+        "use-context-selector": "^1.3.9",
+        "web-vitals": "^1.0.1"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/jest-dom": "^5.15.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "@types/jest": "^26.0.24",
-        "@types/react": "^17.0.34",
+        "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
         "@types/react-gtm-module": "^2.0.1",
         "@types/react-router-dom": "^5.3.2",
-        "@typescript-eslint/eslint-plugin": "^5.2.0",
-        "@typescript-eslint/parser": "^5.2.0",
+        "@typescript-eslint/eslint-plugin": "^5.5.0",
+        "@typescript-eslint/parser": "^5.5.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-airbnb-typescript": "^12.3.1",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.25.2",
-        "eslint-plugin-import-helpers": "^1.1.0",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-import-helpers": "^1.2.0",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-react": "^7.26.1",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "prettier": "^2.4.1",
+        "eslint-plugin-react": "^7.27.1",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "prettier": "^2.5.0",
         "react-scripts": "^4.0.3",
-        "typescript": "^4.4.4"
+        "typescript": "^4.5.2"
     },
     "scripts": {
         "start": "react-scripts start",
