--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "rules": {
         "@typescript-eslint/no-explicit-any": "warn",
         "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/no-shadow": "warn",
         "import/no-unresolved": "off",
         "react/jsx-props-no-spreading": "off",
         "react/jsx-uses-react": "off",
