--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "removeComments": true,
         "resolveJsonModule": true,
         "skipLibCheck": true,
-        "strict": true,
+        "strict": false,
         "target": "es5"
     },
     "include": ["src/**/*"]
