--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
+    "parser": "typescript",
+    "printWidth": 80,
     "semi": true,
     "singleQuote": true,
     "tabWidth": 4,
-    "printWidth": 80,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "useTabs": false
 }
