--- a/nginx/server.conf
+++ b/nginx/server.conf
@@ -10,12 +10,12 @@ server {
     root /app;
     index index.html index.php;
 
-    ## route with a file extension
+    # route with a file extension
     location ~ ^.+\..+$ {
         try_files $uri =404;
     }
 
-    ## route without a file extension
+    # route without a file extension
     location / {
         try_files $uri $uri/ /index.html;
     }
