--- a/.editorconfig
+++ b/.editorconfig
@@ -7,4 +7,5 @@ indent_size = 4
 indent_style = space
 insert_final_newline = true
 quote_type = single
+editor_ruler = 80
 trim_trailing_whitespace = true
